# forgecode

./: Cargo.toml  README.md  flake.nix  forge.schema.json  package-lock.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.forge/: FORGE_PR_DESCRIPTION.md
.github/workflows/: bounty.yml
crates/forge_api/: Cargo.toml
crates/forge_api/src/: api.rs  forge_api.rs
crates/forge_app/: Cargo.toml
crates/forge_app/src/: agent_executor.rs  app.rs  command_generator.rs  compact.rs  infra.rs  lib.rs  operation.rs  orch.rs  services.rs  tool_executor.rs  tool_registry.rs
crates/forge_app/src/dto/anthropic/transforms/: set_cache.rs
crates/forge_app/src/dto/openai/: response.rs
crates/forge_app/src/dto/openai/transformers/: mod.rs  pipeline.rs  set_reasoning_effort.rs
crates/forge_app/src/fmt/: fmt_input.rs  fmt_output.rs
crates/forge_app/src/hooks/: compaction.rs  doom_loop.rs  external.rs  loader.rs  mod.rs  pending_todos.rs  title_generation.rs  tracing.rs  trust.rs
crates/forge_app/src/orch_spec/: orch_spec.rs
crates/forge_app/src/orch_spec/snapshots/: forge_app__orch_spec__orch_system_spec__system_prompt.snap  forge_app__orch_spec__orch_system_spec__system_prompt_tool_supported.snap  forge_app__orch_spec__orch_system_spec__system_prompt_with_extensions.snap  forge_app__orch_spec__orch_system_spec__system_prompt_with_extensions_truncated.snap
crates/forge_app/src/snapshots/: forge_app__tool_registry__all_rendered_tool_descriptions.snap  forge_app__tool_registry__dynamic_tool_description_with_text_only_model.snap  forge_app__tool_registry__dynamic_tool_description_with_vision_model.snap
crates/forge_app/src/transformers/: drop_reasoning_only_messages.rs  mod.rs  model_specific_reasoning.rs
crates/forge_ci/src/jobs/: bounty_job.rs
crates/forge_config/: .forge.toml
crates/forge_config/src/: compact.rs  config.rs  reader.rs  writer.rs
crates/forge_domain/: Cargo.toml
crates/forge_domain/src/: agent.rs  cached_hook.rs  chat_response.rs  context.rs  env.rs  hook.rs  lib.rs  model.rs  provider.rs  repo.rs  result_stream_ext.rs  update.rs
crates/forge_domain/src/tools/: catalog.rs
crates/forge_domain/src/tools/call/: context.rs
crates/forge_domain/src/tools/definition/snapshots/: forge_domain__tools__definition__usage__tests__tool_usage.snap
crates/forge_domain/src/tools/descriptions/: fs_multi_patch.md  fs_read.md  net_fetch.md  semantic_search.md  shell.md  task.md  todo_read.md  todo_write.md
crates/forge_domain/src/tools/snapshots/: forge_domain__tools__catalog__tests__tool_definition_json.snap
crates/forge_domain/src/transformer/: normalize_tool_args.rs
crates/forge_domain/tests/: test_stringified_tool_calls.rs
crates/forge_eventsource/: Cargo.toml
crates/forge_eventsource/src/: error.rs  event_source.rs  lib.rs  reqwest_ext.rs  retry.rs
crates/forge_eventsource_stream/: Cargo.toml
crates/forge_eventsource_stream/src/: event.rs  event_stream.rs  lib.rs  parser.rs  traits.rs  utf8_stream.rs
crates/forge_infra/: Cargo.toml
crates/forge_infra/src/: env.rs  executor.rs  forge_infra.rs  http.rs  mcp_client.rs
crates/forge_main/: Cargo.toml  build.rs
crates/forge_main/src/: banner.rs  cli.rs  clipboard.rs  deps.rs  editor.rs  info.rs  input.rs  lib.rs  logs.rs  model.rs  porcelain.rs  prompt.rs  select_runner.rs  stream_renderer.rs  ui.rs  update.rs
crates/forge_main/src/fish/: mod.rs  plugin.rs  rprompt.rs
crates/forge_main/src/zsh/: mod.rs  plugin.rs  rprompt.rs
crates/forge_repo/: Cargo.toml
crates/forge_repo/proto/: forge.proto
crates/forge_repo/src/: agent.rs  forge_repo.rs  skill.rs
crates/forge_repo/src/agents/: forge.md
crates/forge_repo/src/conversation/: conversation_record.rs  conversation_repo.rs
crates/forge_repo/src/provider/: anthropic.rs  event.rs  google.rs  mock_server.rs  opencode.rs  provider.json  provider_repo.rs  retry.rs  utils.rs
crates/forge_repo/src/provider/openai_responses/: repository.rs
crates/forge_repo/src/provider/openai_responses/snapshots/: forge_repo__provider__openai_responses__request__tests__openai_responses_all_catalog_tools.snap
crates/forge_repo/src/skills/sem-search/: SKILL.md
crates/forge_select/src/: preview.rs  select.rs  widget.rs
crates/forge_services/: Cargo.toml
crates/forge_services/src/: app_config.rs  forge_services.rs  sync.rs
crates/forge_services/src/mcp/: service.rs
crates/forge_services/src/tool_services/: fs_patch.rs
crates/forge_spinner/: Cargo.toml
crates/forge_spinner/src/: lib.rs
crates/forge_stream/src/: mpsc_stream.rs
crates/forge_tracker/src/: can_track.rs
docs/: hooks.md
plans/: 2026-04-25-hook-security-integrity-v1.md  2026-04-25-hook-security-integrity-v2.md  2026-05-01-2026-05-01-tree-mode-branch-summary-v1.md  2026-05-01-2026-05-01-tree-mode-migration-feasibility-v1.md  2026-05-01-enhance-tool-selection-guidance-v1.md  2026-05-01-modern-cli-migration-feasibility-v1.md  2026-05-04-tier-model-system-v1.md
scripts/: build-android.sh  test-400-error-message.sh
shell-plugin/: doctor.fish  forge.plugin.fish  forge.setup.fish
shell-plugin/fish/: bindings.fish  completion.fish  config.fish  context.fish  dispatcher.fish  helpers.fish  theme.fish
shell-plugin/fish/actions/: auth.fish  config.fish  conversation.fish  core.fish  editor.fish  git.fish  provider.fish
shell-plugin/lib/: context.zsh  dispatcher.zsh  helpers.zsh
shell-plugin/lib/actions/: config.zsh  conversation.zsh  git.zsh
templates/: forge-branch-summary.md  forge-custom-agent-template.md  forge-partial-skill-instructions.md
