[package]
name = "forge_eventsource"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
forge_eventsource_stream.workspace = true
reqwest = { version = "0.12.0", default-features = false, features = ["stream"] }
futures-core = "0.3.5"
pin-project-lite = "0.2.8"
nom = "8.0.0"
mime = "0.3.16"
futures-timer = "3.0.2"
thiserror = "2.0.0"

[dev-dependencies]
futures = "0.3.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-retry = "0.6"
pin-utils = "0.1"
rocket = "0.5.0"
