[package]
name = "forge_eventsource_stream"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["futures-core/std", "nom/std"]

[dependencies]
futures-core = { version = "0.3", default-features = false }
nom = { version = "8.0", default-features = false }
pin-project-lite = "0.2.8"

[dev-dependencies]
futures = "0.3"
http = "1.0"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1.0", features = ["macros", "rt"] }
url = "2.2"
