[package]
name = "forge_repo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
forge_app.workspace = true
forge_config.workspace = true
forge_domain.workspace = true
forge_infra.workspace = true
forge_snaps.workspace = true
forge_fs.workspace = true
forge_template.workspace = true
forge_json_repair.workspace = true
anyhow.workspace = true
backon.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
reqwest.workspace = true
url.workspace = true
bytes.workspace = true
strum.workspace = true
forge_eventsource.workspace = true
forge_eventsource_stream.workspace = true
handlebars.workspace = true
merge.workspace = true
aws-config.workspace = true
aws-sdk-bedrockruntime.workspace = true
aws-credential-types.workspace = true
aws-smithy-types.workspace = true
aws-smithy-runtime-api.workspace = true
aws-smithy-async.workspace = true
aws-smithy-runtime.workspace = true
lazy_static.workspace = true
derive_setters.workspace = true
base64.workspace = true
schemars.workspace = true
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.3.7", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.2.0"
thiserror.workspace = true
derive_more.workspace = true
gray_matter = { workspace = true }
dirs.workspace = true
async-openai.workspace = true
regex.workspace = true
google-cloud-auth.workspace = true

# gRPC for codebase client
tonic.workspace = true
prost = "0.14.3"

prost-types = "0.14.3"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"

[dev-dependencies]
forge_test_kit.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
insta = { workspace = true }
serial_test = "3.4"
fake = { version = "5.1.0", features = ["derive"] }
derive_setters.workspace = true
mockito = { workspace = true }
regex = { workspace = true }
